--- a/app/src/main/res/menu/menu_game.xml
+++ b/app/src/main/res/menu/menu_game.xml
@@ -3,15 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nazdesigns.polascope.GameActivity">
     <item
-        android:id="@+id/light_theme"
+        android:id="@+id/log_out"
         android:orderInCategory="100"
-        android:title="@string/light_theme"
-        app:showAsAction="never" />
-
-    tools:context="com.nazdesigns.polascope.GameActivity">
-    <item
-        android:id="@+id/dark_theme"
-        android:orderInCategory="100"
-        android:title="@string/dark_theme"
-        app:showAsAction="never" />
+        android:title="@string/log_out"
+        app:showAsAction="never"
+        tools:context="com.nazdesigns.polascope.GameActivity"/>
 </menu>
