--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:paddingStart="@dimen/default_margin"
-        android:paddingEnd="@dimen/default_margin" />
+        tools:listitem="@layout/text_layout"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
