--- a/app/src/main/res/layout/text_layout.xml
+++ b/app/src/main/res/layout/text_layout.xml
@@ -6,31 +6,17 @@
     android:paddingStart="@dimen/default_margin"
     android:paddingEnd="@dimen/default_margin"
     android:background="@color/backgroundLight">
-
-    <LinearLayout
-        android:orientation="horizontal"
+    <TextView
+        android:id="@+id/resume"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/lightIcone"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:padding="2dp"
-            android:contentDescription="@string/icone_light"
-            android:src="@mipmap/ic_launcher"/>
-
-        <TextView
-            android:id="@+id/resume"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
-            />
-    </LinearLayout>
+        android:layout_height="34dp"
+        android:drawableStart="@mipmap/ic_launcher"
+        android:drawablePadding="2dp"
+        />
     <TextView
         android:id="@+id/longText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:text="Un buen subtitulo por fin. Y dodemos poner muchas cosas más para que aparexcan en pantalla. Y que pasaria si sigo escribiendo más y más. Todo pararecerá."
         />
 </LinearLayout>
