--- a/app/src/main/res/layout/text_layout.xml
+++ b/app/src/main/res/layout/text_layout.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingStart="@dimen/default_margin"
-    android:paddingEnd="@dimen/default_margin"
-    android:background="@color/backgroundLight">
+    android:paddingEnd="@dimen/default_margin">
+
     <TextView
         android:id="@+id/resume"
         android:layout_width="wrap_content"
