--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <resources>
     <dimen name="app_bar_height">160dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
+    <dimen name="large_margin">16dp</dimen>
     <dimen name="default_margin">8dp</dimen>
     <dimen name="toolbar_height">60dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
