--- a/app/src/main/res/layout/text_layout.xml
+++ b/app/src/main/res/layout/text_layout.xml
@@ -1,22 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="@dimen/default_margin"
-    android:paddingEnd="@dimen/default_margin">
+    >
 
-    <TextView
-        android:id="@+id/resume"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/background"
+        android:orientation="horizontal"
+        android:layoutDirection="rtl"
+        android:layout_width="match_parent"
         android:layout_height="34dp"
-        android:drawableStart="@mipmap/ic_launcher"
         android:drawablePadding="2dp"
-        />
-    <TextView
-        android:id="@+id/longText"
+        android:background="@color/backgroundRed">
+
+        <Button
+            style="@style/Base.TextAppearance.AppCompat.Button"
+            android:background="@color/backgroundRed"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
+        <Button
+            style="@style/Base.TextAppearance.AppCompat.Button"
+            android:background="@color/backgroundRed"
+            android:layout_width="32dp"
+            android:layout_height="32dp" />
+        <Button
+            style="@style/Base.TextAppearance.AppCompat.Button"
+            android:background="@color/backgroundRed"
+            android:layout_width="32dp"
+            android:layout_height="32dp" />
+
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        />
-</LinearLayout>
+        android:orientation="vertical"
+        >
+
+        <TextView
+            android:id="@+id/resume"
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:drawablePadding="2dp"
+            />
+        <TextView
+            android:id="@+id/longText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="okokokookokokokokokokokokokokokokokokokokokokokokokokok"
+            />
+    </LinearLayout>
+</FrameLayout>
