--- a/app/src/main/res/layout/text_layout.xml
+++ b/app/src/main/res/layout/text_layout.xml
@@ -11,48 +11,56 @@
         android:orientation="horizontal"
         android:layoutDirection="rtl"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/holder_height"
         android:padding="5dp"
         android:background="@color/backgroundRed">
 
         <ImageButton
+            android:id="@+id/button_plus_down"
             style="@style/Base.TextAppearance.AppCompat.Button"
-            android:background="@color/backgroundRed"
-            android:cropToPadding="true"
+            android:background=""
+            android:src="@mipmap/down_arrow"
             android:layout_width="32dp"
             android:layout_height="32dp" />
         <ImageButton
+            android:id="@+id/button_edit"
             style="@style/Base.TextAppearance.AppCompat.Button"
-            android:background="@color/backgroundRed"
-            android:cropToPadding="true"
+            android:background=""
+            android:src="@mipmap/edit"
             android:layout_width="32dp"
             android:layout_height="32dp" />
         <ImageButton
+            android:id="@+id/button_plus_up"
             style="@style/Base.TextAppearance.AppCompat.Button"
-            android:background="@color/backgroundRed"
-            android:cropToPadding="true"
+            android:background=""
+            android:src="@mipmap/up_arrow"
             android:layout_width="32dp"
             android:layout_height="32dp" />
 
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/foreground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@color/backgroundLight"
         >
 
         <TextView
             android:id="@+id/resume"
             android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:drawablePadding="2dp"
+            android:layout_height="@dimen/holder_height"
+            android:paddingStart="@dimen/text_padding"
+            android:paddingEnd="@dimen/text_padding"
+            android:drawableEnd="@mipmap/empty"
             />
         <TextView
             android:id="@+id/longText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="@dimen/text_padding"
+            android:paddingEnd="@dimen/text_padding"
             android:visibility="gone"
-            android:text="okokokookokokokokokokokokokokokokokokokokokokokokokokok"
             />
     </LinearLayout>
 </FrameLayout>
