--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,12 +2,13 @@
     <dimen name="app_bar_height">160dp</dimen>
     <dimen name="large_margin">16dp</dimen>
     <dimen name="default_margin">8dp</dimen>
-    <dimen name="toolbar_height">60dp</dimen>
+    <dimen name="toolbar_height">66dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="button_width">160dp</dimen>
     <dimen name="button_height">48dp</dimen>
-    <dimen name="holder_height">40dp</dimen>
+    <dimen name="holder_height">66dp</dimen>
+    <dimen name="icones_size">42dp</dimen>
     <dimen name="text_padding">10dp</dimen>
 </resources>
