mejorada la vista del recyclerView

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -10,8 +10,8 @@
         android:id="@+id/edit_resume"
         android:hint="@string/resume_hint"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/holder_height"
-        android:lines="2"
+        android:layout_height="@dimen/text_edit_height"
+        android:lines="3"
         android:ems="16"
         android:inputType="text|textMultiLine"
         app:layout_constraintTop_toTopOf="parent"
