--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -9,14 +9,26 @@
     <EditText
         android:id="@+id/edit_resume"
         android:hint="@string/resume_hint"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/text_edit_height"
+        app:layout_constrainedWidth="true"
         android:lines="3"
         android:ems="16"
         android:inputType="text|textMultiLine"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/isLightButton"
+        />
+
+    <ToggleButton
+        android:id="@+id/isLightButton"
+        android:layout_width="@dimen/text_edit_height"
+        android:layout_height="@dimen/text_edit_height"
+        android:textOn="Light"
+        android:textOff="Dark"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
         />
 
     <EditText
