--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -14,7 +14,7 @@
         app:layout_constrainedWidth="true"
         android:lines="3"
         android:ems="16"
-        android:inputType="text|textMultiLine"
+        android:inputType="textShortMessage|textCapSentences|textAutoCorrect|textMultiLine"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/isLightButton"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         app:layout_constrainedHeight="true"
         android:ems="16"
-        android:inputType="textLongMessage|textMultiLine"
+        android:inputType="textLongMessage|textCapSentences|textAutoCorrect|textMultiLine"
         app:layout_constraintTop_toBottomOf="@id/edit_resume"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
